k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    # - alpha.shoonya.ai4bharat.org
    - django-aks.westus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  # - host: alpha.shoonya.ai4bharat.org
  - host: django-aks.westus.cloudapp.azure.com
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: shoonya-django-backend-service
              port: 
                number: 80
